--- a/LightOff_AMIRAULT_version_console/nbproject/project.properties
+++ b/LightOff_AMIRAULT_version_console/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=LightOff_AMIRAULT_version_console
-main.class=lightoff_amirault_version_console.LightOff_AMIRAULT_version_console
+main.class=LightOff_AMIRAULT_version_console
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
